[gd_scene load_steps=7 format=3 uid="uid://bi7vr8n2y7b5"]

[ext_resource type="Texture2D" uid="uid://dh0uy78hioto3" path="res://art/props/shelf.png" id="1_6gg56"]
[ext_resource type="Script" uid="uid://dcswsevd0ehbf" path="res://scripts/egg_shelf.gd" id="1_qpkqp"]
[ext_resource type="ButtonGroup" uid="uid://cpegfv37n7gxg" path="res://resources/egg_buttons.tres" id="2_lcyoe"]
[ext_resource type="Script" uid="uid://br1lu1lnknnov" path="res://scripts/egg.gd" id="3_1wort"]
[ext_resource type="Resource" uid="uid://bo03k2xsccltr" path="res://resources/bird-one.tres" id="6_kbve7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8cvjq"]

[node name="Egg Shelf" type="MarginContainer"]
custom_minimum_size = Vector2(200, 0)
script = ExtResource("1_qpkqp")

[node name="Organizer" type="Control" parent="."]
custom_minimum_size = Vector2(200, 648)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 3

[node name="TextureRect" type="TextureRect" parent="Organizer"]
texture_filter = 1
layout_mode = 0
offset_top = 44.0
offset_right = 200.0
offset_bottom = 604.0
texture = ExtResource("1_6gg56")

[node name="ScrollContainer" type="ScrollContainer" parent="Organizer"]
custom_minimum_size = Vector2(0, 540)
layout_direction = 3
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Organizer/ScrollContainer"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="GridContainer" type="GridContainer" parent="Organizer/ScrollContainer/MarginContainer"]
custom_minimum_size = Vector2(0, 560)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2

[node name="Egg1" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg2" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg3" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg4" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg5" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg6" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg7" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg8" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg9" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg10" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg11" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg12" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg13" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg14" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg15" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[node name="Egg16" type="Button" parent="Organizer/ScrollContainer/MarginContainer/GridContainer"]
visible = false
texture_filter = 1
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_8cvjq")
toggle_mode = true
button_group = ExtResource("2_lcyoe")
script = ExtResource("3_1wort")
species = ExtResource("6_kbve7")
metadata/_custom_type_script = "uid://br1lu1lnknnov"

[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg1" to="." method="_on_egg_1_selection"]
[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg2" to="." method="_on_egg_2_selection"]
[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg3" to="." method="_on_egg_3_selection"]
[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg4" to="." method="_on_egg_4_selection"]
[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg5" to="." method="_on_egg_5_selection"]
[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg6" to="." method="_on_egg_6_selection"]
[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg7" to="." method="_on_egg_7_selection"]
[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg8" to="." method="_on_egg_8_selection"]
[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg9" to="." method="_on_egg_9_selection"]
[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg10" to="." method="_on_egg_10_selection"]
[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg11" to="." method="_on_egg_11_selection"]
[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg12" to="." method="_on_egg_12_selection"]
[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg13" to="." method="_on_egg_13_selection"]
[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg14" to="." method="_on_egg_14_selection"]
[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg15" to="." method="_on_egg_15_selection"]
[connection signal="selection" from="Organizer/ScrollContainer/MarginContainer/GridContainer/Egg16" to="." method="_on_egg_16_selection"]
